--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  anim_search_bar: ^2.0.1 # Animasyonlu Arama cubugu için gerekli olan eklentimiz.
 
 dev_dependencies:
   flutter_test:
